<resources>
    <string name="app_name">火车票12307</string>

    <string name="login_text">登录</string>
    <string name="account_text">账号</string>
    <string name="account_hint">请输入账号</string>
    <string name="password_text">密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="auto_login">自动登录</string>

    <string name="register_text">注册</string>
    <string name="re_password_text">确认密码</string>
    <string name="re_password_hint">请再次输入密码</string>
    <string name="real_name_text">真实姓名</string>
    <string name="real_name_hint">请输入真实姓名</string>
    <string name="id_number_text">身份证号</string>
    <string name="id_number_hint">请输入身份证号</string>
    <string name="id_number_error_hint">请正确输入18位身份证号码</string>
    <string name="re_password_error_hint">两次输入的密码不一致</string>

    <string name="main_tab_one">购票</string>
    <string name="start_station_hint">出发地</string>
    <string name="end_station_hint">目的地</string>
    <string name="start_station_in_hint">请输入出发地</string>
    <string name="end_station_in_hint">请输入目的地</string>
    <string name="start_end_same_error_hint">出发地不能和目的地相同</string>
    <string name="date_text">出发日期</string>
    <string name="student_text">学生票</string>
    <string name="model_all">全部</string>
    <string name="model_gdc">G/D/C</string>
    <string name="model_z">Z字头</string>
    <string name="model_t">T字头</string>
    <string name="model_k">K字头</string>
    <string name="model_other">其他</string>
    <string name="query_text">查询</string>
    <string name="query_ticket_failed">查询车票失败</string>
    <string name="swz_num_text">商务座\n%s</string>
    <string name="zy_num_text">一等座\n%s</string>
    <string name="ze_num_text">二等座\n%s</string>
    <string name="yz_num_text">硬座\n%s</string>
    <string name="yw_num_text">硬卧\n%s</string>
    <string name="wz_num_text">无座\n%s</string>
    <string name="submit_text">提交</string>
    <string name="seat_none_tip">该座次已无余票</string>
    <string name="pay_success_text">支付成功</string>
    <string name="carriage_text">%s车厢</string>
    <string name="seat_no_text">%s座</string>
    <string name="money_text">￥%s</string>

    <string name="main_tab_two">订单</string>
    <string name="order_now">未出行订单</string>
    <string name="order_old">历史订单</string>
    <string name="order_unfinished">未完成订单</string>
    <string name="ticket_id_type">二代身份证</string>
    <string name="tui_ticket_text">退票</string>
    <string name="real_tui_ticket_text">确定退票</string>
    <string name="gai_ticket_text">改签</string>

    <string name="pay_ticket">支付页面</string>
    <string name="should_pay_money">应付金额：%s元</string>
    <string name="gsyh">工商银行</string>
    <string name="nyyh">农业银行</string>
    <string name="zgyh">中国银行</string>
    <string name="jsyh">建设银行</string>
    <string name="zsyh">招商银行</string>
    <string name="ycyh">邮储银行</string>
    <string name="zgyl">中国银联</string>
    <string name="ztytk">中铁银通卡</string>
    <string name="zfb">支付宝</string>
    <string name="submit_pay_text">提交支付</string>

    <string name="main_tab_three">我</string>
    <string name="modify_info">修改信息</string>
    <string name="modify_member">管理联系人</string>
    <string name="modify_tag_text">点击编辑</string>
    <string name="add_btn_text">添加</string>
    <string name="add_member_title">添加联系人</string>
    <string name="modify_member_title">编辑联系人</string>
    <string name="modify_btn_text">修改</string>
    <string name="delete_btn_text">删除</string>
    <string name="modify_cant_tip">请到修改信息修改自己的信息</string>
    <string name="reset_password">修改密码</string>
    <string name="reset_password_old_password_text">原密码</string>
    <string name="reset_password_old_password_hint">请输入原密码</string>
    <string name="reset_password_new_password_text">新密码</string>
    <string name="reset_password_new_password_hint">请输入新密码</string>
    <string name="reset_password_re_new_password_text">确认新密码</string>
    <string name="reset_password_re_new_password_hint">请再次输入新密码</string>

    <string name="select_member_title">选择联系人</string>
    <string name="select_member_tip">请选择联系人</string>
    <string name="finish_btn_text">完成</string>

    <string name="about">关于</string>

    <string name="exit_text">注销</string>

    <string name="tip">提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
</resources>
