<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/view_title_bar" />

    <TextView
        android:id="@+id/should_pay_money_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/tomato"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="应付金额：37.5元" />

    <RadioGroup
        android:id="@+id/pay_typ_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <RadioButton
            android:id="@+id/gsyh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gsyh"/>

        <RadioButton
            android:id="@+id/nyyh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nyyh" />

        <RadioButton
            android:id="@+id/zgyh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zgyh" />

        <RadioButton
            android:id="@+id/jsyh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jsyh" />

        <RadioButton
            android:id="@+id/zsyh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zsyh" />

        <RadioButton
            android:id="@+id/ycyh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ycyh" />

        <RadioButton
            android:id="@+id/zgyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zgyl" />

        <RadioButton
            android:id="@+id/ztytk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ztytk" />

        <RadioButton
            android:id="@+id/zfb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zfb" />

    </RadioGroup>

    <!--提交按钮区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_btn_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/submit_pay_text"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
