<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/view_title_bar"/>

    <!--原密码区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/old_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_old_password_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/old_password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/square_et_bg"
            android:hint="@string/reset_password_old_password_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="6dp"
            android:singleLine="true"
            android:textSize="16sp" />

    </LinearLayout>

    <!--密码区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/new_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_new_password_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/new_password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/square_et_bg"
            android:hint="@string/reset_password_new_password_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="6dp"
            android:singleLine="true"
            android:textSize="16sp" />

    </LinearLayout>

    <!--确认密码区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/re_new_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_re_new_password_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/re_new_password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/square_et_bg"
            android:hint="@string/reset_password_re_new_password_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="6dp"
            android:singleLine="true"
            android:textSize="16sp" />

    </LinearLayout>

    <!--提交按钮区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/submit_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/common_btn_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/submit_text"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
