<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!--Title区域-->
    <include layout="@layout/view_title_bar" />

    <!--真实姓名区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/real_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real_name_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/real_name_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/square_et_bg"
            android:hint="@string/real_name_hint"
            android:maxLength="16"
            android:padding="6dp"
            android:singleLine="true"
            android:textSize="16sp" />

    </LinearLayout>

    <!--身份证号区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/id_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_number_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/id_number_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/square_et_bg"
            android:hint="@string/id_number_hint"
            android:maxLength="18"
            android:padding="6dp"
            android:singleLine="true"
            android:textSize="16sp" />

    </LinearLayout>

    <!--编辑删除按钮区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/modify_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/common_btn_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/modify_btn_text"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/common_btn_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/delete_btn_text"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
