<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/view_title_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--内容区域-->
        <android.support.v4.view.ViewPager
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"/>

        <!--Tab区域-->
        <eu.long1.spacetablayout.SpaceTabLayout
            android:id="@+id/main_tab"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            app:number_of_tabs="three"
            app:starting_position="one"
            app:text_one="@string/main_tab_one"
            app:text_two="@string/main_tab_two"
            app:text_three="@string/main_tab_three"
            app:icon_one="@drawable/ic_train_white"
            app:icon_two="@drawable/ic_reorder_white"
            app:icon_three="@drawable/ic_person_white"/>

    </RelativeLayout>

</LinearLayout>
